--- a/src/style.css
+++ b/src/style.css
@@ -1,4 +1,74 @@
 body {
-    background: blueviolet;
+    background-color: lightblue ;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+a {
+    color: #885df1;
+}
+.container {
+    margin: 120px auto;
+    max-width: 600px;
+}
+
+header {
+    margin-bottom: 30px;
+}
+
+h1 {
     text-align: center;
+    font-weight: 800;
+    font-size: 36px;
+    line-height: 1.5;
+    color: black;
+}
+
+
+.form {
+    padding: 30px;
+    box-shadow: 0px 20px 60px rgb(65, 50, 100, 0.08 );
+    background-color: white;
+    border-radius: 10px;
+    display: flex;
+    margin-bottom: 30px;
+}
+
+.instructions {
+    padding: 16px;
+   border: 1px solid rgb(39, 33, 66, 0.5);
+   width: 80%;
+   font-size: 16px;
+   border-radius: 50px;
+   line-height: 20px;
+   color: #272044;
+}
+
+.submit-button {
+    margin-left: 10px;
+    background: rgb(2, 55, 73);
+    color: white;
+    border: none;
+    border-radius: 50px;
+    padding: 16px;
+    font-size: 16px;
+    cursor: pointer;
+    width: 20%;
+
+}
+
+.poem {
+    font-size: 14px;
+    background-color: white;
+    padding: 20px;
+    line-height: 2;
+    border-left: 3px solid #885df1;
+    border-radius: 10px;
+    box-shadow: 0px 20px 60px rgb(65, 50, 100, 0.08 );
+}
+
+.footer {
+    text-align: center;
+    font-size: 14px;
+    color: #272044;
+    margin-top: 30px;
 }
