--- a/src/style.css
+++ b/src/style.css
@@ -45,15 +45,13 @@ h1 {
 
 .submit-button {
     margin-left: 10px;
-    background: rgb(2, 55, 73);
+    background: #885df1;
     color: white;
     border: none;
-    border-radius: 50px;
-    padding: 16px;
+    width: 150px;
     font-size: 16px;
-    cursor: pointer;
-    width: 20%;
-
+    border-radius: 50px;
+    padding: 14px 24px;
 }
 
 .poem {
