--- a/src/style.css
+++ b/src/style.css
@@ -64,6 +64,9 @@ h1 {
     box-shadow: 0px 20px 60px rgb(65, 50, 100, 0.08 );
 }
 
+.poem strong {
+    color: #885df1;
+}
 .footer {
     text-align: center;
     font-size: 14px;
