--- a/src/style.css
+++ b/src/style.css
@@ -23,14 +23,23 @@ h1 {
     color: black;
 }
 
-
-.form {
-    padding: 30px;
-    box-shadow: 0px 20px 60px rgb(65, 50, 100, 0.08 );
+.form-container {
+    padding: 15px  20px;
+    box-shadow: 0px 20px 60px rgb(65, 50, 100, 0.08);
     background-color: white;
     border-radius: 10px;
-    display: flex;
     margin-bottom: 30px;
+}
+     
+.form {
+    display: flex;
+}
+
+.hint {
+    line-height: 1.5;
+    margin-top: 5px;
+    opacity: 0.6;
+    font-size: 12px;
 }
 
 .instructions {
@@ -62,6 +71,26 @@ h1 {
     border-left: 3px solid #885df1;
     border-radius: 10px;
     box-shadow: 0px 20px 60px rgb(65, 50, 100, 0.08 );
+}
+
+ .generating {
+     animation: blink-animation 1s steps(5, start) infinite;
+ }
+
+ @keyframes blink-animation {
+     to {
+         visibility: hidden;
+     }
+ }
+
+ @-webkit-keyframes blink-animation {
+     to {
+         visibility: hidden;
+     }
+ }
+
+.hidden {
+    display: none;
 }
 
 .poem strong {
